--- a/package.json
+++ b/package.json
@@ -21,12 +21,22 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "angular2-froala-wysiwyg": "^2.6.0",
+    "angular5-data-table": "^0.5.1",
+    "angularfire2": "^5.0.0-rc.6",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "firebase": "^4.11.0",
+    "moment": "^2.20.1",
+    "ngx-delete-confirm": "0.0.4",
+    "router": "^1.3.2",
     "rxjs": "^5.5.2",
+    "summernote": "^0.8.10",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.2",
+    "@angular/cli": "^1.7.0",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
